--- a/src/global.css
+++ b/src/global.css
@@ -1,11 +1,24 @@
 :root{
+    --app-max-width: 1200px;
+
     --background: #def2f1;
     --heading: #2b7a7b;
-    --button: #3aafa9;
-    --text: #17252A;
+    --button: #24343a;
+    --text: #24343a;
     --links: #3aafa9;
     
     --button-hover: #7c7c7c;
 
     --menuTransitions: 0.4s;
+
+
+    /* PROJECTS PAGE */
+    --projects-border: #24343a;
+    --projects-text: #24343a;
+    --card-background: whitesmoke;
+    --card-links__border: rgb(255, 255, 255);
 }
+
+/* body{
+    background:var(--background);
+} */
