--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,6 @@
     --links: #3aafa9;
     
     --button-hover: #7c7c7c;
-
     --menuTransitions: 0.4s;
 
 
@@ -19,6 +18,19 @@
     --card-links__border: rgb(255, 255, 255);
 }
 
-/* body{
-    background:var(--background);
-} */
+html, body{
+    margin:0 !important;
+}
+/* HOT FIX!! NAV TRANSITION ON SCROLL */
+.nav-btn__colors{
+    z-index: 995;
+    background: #def2f1 !important;
+    box-shadow: 0px 2px 3px var(--text);
+    position: fixed;
+    width: 100vw;
+    height:90px;
+    top:0;
+}
+.nav-btn__colors i{
+    color:24343a !important;
+}
