Added custom mouse Position Tracking Hook

--- a/src/global.css
+++ b/src/global.css
@@ -15,5 +15,5 @@
     --projects-border: #24343a;
     --projects-text: #24343a;
     --card-background: #def2f1;
-    --card-links__border: rgb(255, 255, 255);
+    --card-links__border: rgb(243, 243, 243, 0.8);
 }
