--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 *{margin: 0;}
 
 body {
+  background-color: var(--background);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
