--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,9 @@ body {
 
 @media (max-width: 720px){
   body{
-    font-size:12px;
+    font-size:8px;
+  }
+  .navbar{
+    position: static;
   }
 }
