--- a/src/index.css
+++ b/src/index.css
@@ -29,9 +29,19 @@ body {
 
 @media (max-width: 720px){
   body{
-    font-size:8px;
+    font-size:12px;
   }
   .navbar{
-    position: static;
+    border-bottom: none;
+    background: rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 2px 3px var(--text);
+  }
+  .navbar i, .navbar button{
+    font-size: 16px ;
+    padding:4px;
+    margin:0;
+    box-shadow: none;
+    border: none;
+    background:none;
   }
 }
